fixed alignment and added insta

--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
 main {
     background-blend-mode: overlay;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    position: relative;
+    top: 100px;
+    justify-content: space-around;
 }
 
 section {
@@ -18,6 +19,7 @@ section {
     margin-bottom: 8px;
     padding: 8px;
     width: 600px;
+    height: auto;
     border-radius: 10px;
 }
 
@@ -26,36 +28,47 @@ aside {
     opacity: 80%;
     margin-top: 8px;
     margin-bottom: 8px;
-    padding: 8px;
     width: 300px;
+    height: auto;
     border-radius: 10px;
-}
-
-footer {
-    background-color: pink;
-    opacity: 80%;
-    width: 100%;
-    border-radius: 10px;
-}
-
-.location {
-    line-height: 0px;
 }
 
 #wrapper {
     width: 80%;
     margin: 0 auto;
+    display: contents;
 }
 
-.hours h2 {
+footer {
+    position: absolute;
+    bottom: 25px;
+    right: 100px;
+    width: 80%;
+    height: 50px;
+}
+
+.location {
+    background-color: pink;
+    opacity: 80%;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+h2 {
     text-align: center;
 }
 
-.hours ol {
+ul {
     list-style-type: none;
+    padding: 0px;
+    text-align: center;
 }
 
-.photo {
-    height: 325px;
-    width: 500px;
+img {
+    width: 20px;
+    height: 20px;
 }
